--- a/demo-resources/user-manifests.yaml
+++ b/demo-resources/user-manifests.yaml
@@ -15,8 +15,6 @@ spec:
     limits.cpu: "1"  
     limits.memory: "1Gi" 
     pods: "2"   
-    services: "5"  
-    persistentvolumeclaims: "4"
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -33,16 +31,25 @@ spec:
   - chart: dao-2048
     helm:
       values: |
-        replicaCount: 1
+        replicaCount: 3
 
         resources: 
           limits:
-            cpu: 500m
+            cpu: 1500m
             memory: 128Mi
           requests:
             cpu: 100m
             memory: 128Mi
 
+        nodeSelector:
+          node/role: storage
+        
+        tolerations:
+          - key: node/role
+            value: storage
+            operator: Equal
+            effect: NoSchedule
+      
         service:
           type: LoadBalancer
 
