--- a/demo-cluster/.k8s-gen/user-manifests.yaml
+++ b/demo-cluster/.k8s-gen/user-manifests.yaml
@@ -1,3 +1,17 @@
+---
+apiVersion: argoproj.io/v1alpha1
+kind: AppProject
+metadata:
+  name: user
+  namespace: argocd
+spec:
+  description: User project
+  destinations:
+    - server: https://kubernetes.default.svc
+      namespace: game-2048
+  sourceRepos:
+    - http://daocloud.github.io/dao-2048/
+---
 apiVersion: v1
 kind: Namespace
 metadata:
