add user project

--- a/demo-cluster/.k8s-gen/user-manifests.yaml
+++ b/demo-cluster/.k8s-gen/user-manifests.yaml
@@ -41,7 +41,7 @@ spec:
   destination:
     namespace: game-2048
     server: https://kubernetes.default.svc
-  project: platform
+  project: user
   revisionHistoryLimit: 3
   sources:
   - chart: dao-2048
