--- a/demo-resources/user-manifests.yaml
+++ b/demo-resources/user-manifests.yaml
@@ -1,3 +1,17 @@
+---
+apiVersion: argoproj.io/v1alpha1
+kind: AppProject
+metadata:
+  name: user
+  namespace: argocd
+spec:
+  description: User project
+  destinations:
+    - server: https://kubernetes.default.svc
+      namespace: game-2048
+  sourceRepos:
+    - http://daocloud.github.io/dao-2048/
+---
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -15,6 +29,8 @@ spec:
     limits.cpu: "1"  
     limits.memory: "1Gi" 
     pods: "2"   
+    services: "5"  
+    persistentvolumeclaims: "4"
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -25,7 +41,7 @@ spec:
   destination:
     namespace: game-2048
     server: https://kubernetes.default.svc
-  project: platform
+  project: user
   revisionHistoryLimit: 3
   sources:
   - chart: dao-2048
@@ -42,10 +58,10 @@ spec:
             memory: 128Mi
 
         nodeSelector:
-          node/role: storage
+          role: storage
         
         tolerations:
-          - key: node/role
+          - key: role
             value: storage
             operator: Equal
             effect: NoSchedule
