--- a/demo-resources/gitops-agent-latest.yaml
+++ b/demo-resources/gitops-agent-latest.yaml
@@ -77,16 +77,10 @@ spec:
 
       2. Desired State Extraction:
 
-      * For each `argoproj.io/v1alpha1, kind=Application`, extract and normalize Helm parameters from `.spec.source`.
-      * **Required fields:**
-        * repoURL: Helm repo or Git URL
-        * chart: chart name or local path
-        * targetRevision: version/tag
-        * values: merged from `.helm.values` and `.helm.parameters`
-        * namespace: from `.spec.destination.namespace`
-      * **Normalization rules:**
-        * Validate chart reference: must be `repo/chart` or `./chart`. If invalid, mark as `FAILED_EXTRACTION`.
-        * Merge Helm values and parameters into a single `--values`/`--set` structure.
+        * For each extracted ArgoCD Application, meticulously parse the .spec.source field to obtain the following Helm-specific desired state parameters:
+          - repoURL (the chart repository).
+          - targetRevision (the chart version/tag, typically .spec.source.targetRevision).
+          - values (the complete set of Helm values defined under .spec.source.helm.values or parameters).
 
       3. Manifest Generation (Main task, IMMEDIATE & MANDATORY):
 
