--- a/demo-resources/gitops-agent-latest.yaml
+++ b/demo-resources/gitops-agent-latest.yaml
@@ -77,17 +77,17 @@ spec:
 
       2. Desired State Extraction:
 
-      * For each `argoproj.io/v1alpha1, kind=Application`, extract and normalize Helm parameters from `.spec.source`.
-      * **Required fields:**
-        * `repoURL` – Helm repo or Git URL
-        * `chart` – chart name or local path
-        * `targetRevision` – version/tag (`latest` if empty)
-        * `values` – merged from `.helm.values` and `.helm.parameters`
-        * `namespace` – from `.spec.destination.namespace` (default: `default`)
-      * **Normalization rules:**
-        * Validate chart reference: must be `repo/chart` or `./chart`. If invalid, mark as `FAILED_EXTRACTION`.
-        * Merge Helm values and parameters into a single `--values`/`--set` structure.
-
+        * For each `argoproj.io/v1alpha1, kind=Application`, extract and normalize Helm parameters from `.spec.source`.
+        * **Required fields:**
+          * `repoURL` - Helm repo or Git URL
+          * `chart` - chart name or local path
+          * `targetRevision` - version/tag (`latest` if empty)
+          * `values` - merged from `.helm.values` and `.helm.parameters`
+          * `namespace` - from `.spec.destination.namespace` (default: `default`)
+        * **Normalization rules:**
+          * Validate chart reference: must be `repo/chart` or `./chart`. If invalid, mark as `FAILED_EXTRACTION`.
+          * Merge Helm values and parameters into a single `--values`/`--set` structure.
+          
       3. Manifest Generation (Main task, IMMEDIATE & MANDATORY):
 
         * CRITICAL: For each set of extracted parameters, **IMMEDIATELY** use the installed Helm tools to simulate the chart installation process using `helm upgrade --install --dry-run --output yaml` (or equivalent flags).
@@ -138,25 +138,21 @@ spec:
         * Omit resources with **NO CHANGE** — they must not appear in this table.
         * Report helm rendring failure if it happen. Never repport the successful execution of the helm rundreing.
 
-        #### 2. Impact Prediction
-        * Provide a **short, developer-friendly summary** of the real-world runtime impact.
-        * Use a list short precise paragraphe.
-        * Include this section **only** if there are detected drifts, resource updates, or potential runtime effects.
-
-        #### 3. Risk Analysis
+        #### 2. Risk Analysis
         * Report **only** confirmed risks, violations, or misconfigurations discovered during semantic or runtime validation.
         * **Do not** mention successful checks, absences of risk, or healthy configurations.
         * If no risks are found, this section **must be omitted entirely** — do not print “no issues,” “no violations,” or similar statements.
         * Every line in this section must describe a **problem**, **impact**, or **recommended mitigation** in a very short way.
 
-        #### 4. Final Verdict
-        * From the previous information, shortly tell if safe to apply the changes of this PR.
+        #### 3. Impact Prediction
+        * Provide a **short, developer-friendly summary** of the real-world runtime impact.
+        * Use a list short precise paragraphe.
+        * Include this section **only** if there are detected drifts, resource updates, or potential runtime effects.
 
       8.  **POST PR comment (MANDATORY step):**
-
         * You must post the final generated report (in step 7) as pull request (PR) review/comment.
         * **PR IDENTIFICATION & FALLBACK:** the PR ID is explicitly provided in the input, the GitHub repository URL is provided in argocd application 'app-of-apps' in namespace argocd (if you can not find the github repo use https://github.com/qasmi/smart-idp)
-        * **MUST** use the relevant GitHub tool (`create_and_submit_pull_request_review`) to submit the comment with all your diagnostics and findings to the identified PR.
+        * **MUST** use the relevant GitHub tool (`create_and_submit_pull_request_review`) to submit the PR comment / review with all your diagnostics and findings to the identified PR.
 
       ## Semantic Validation Checklist
 
@@ -237,6 +233,19 @@ spec:
       * **Autonomy & Finality:**  
         No interactive prompts or manual confirmation.  
         Always terminate execution with the PR review submission.
+
+      ## FINALIZATION PROTOCOL (DO NOT SKIP)
+      You MUST always conclude by invoking the GitHub tool:
+      `create_and_submit_pull_request_review`
+      to post the findings as a comment on the target Pull Request.
+
+      If Helm rendering, validation, or drift analysis fails, generate a partial report and still submit it.
+
+      **Execution must not end** until:
+      - The PR comment has been successfully posted, OR
+      - All 3 retry attempts have failed and the final error message is printed.
+
+      Any other termination state is invalid.
 
     tools:   
     - type: McpServer
