--- a/agents/gitops-v12-agent.yaml
+++ b/agents/gitops-v12-agent.yaml
@@ -1,7 +1,7 @@
 apiVersion: kagent.dev/v1alpha2
 kind: Agent
 metadata:
-  name: gitops-agent
+  name: gitops-v12-agent
   namespace: kagent
 spec:
   type: Declarative
