--- a/demo-resources/github-mcp.yaml
+++ b/demo-resources/github-mcp.yaml
@@ -20,7 +20,7 @@ spec:
     args:
     - 'stdio'
     cmd: "/server/github-mcp-server"
-    image: ghcr.io/github/github-mcp-server
+    image: ghcr.io/github/github-mcp-server:0.19.1
     port: 3000
     secretRefs:
     - name: github-mcp-secret
