--- a/demo-resources/gitops-agent-latest.yaml
+++ b/demo-resources/gitops-agent-latest.yaml
@@ -132,19 +132,20 @@ spec:
           | Resource Kind | Namespace | Name | Action (CREATE / UPDATE) |
         * Report helm rendring failure if it happen. Never repport the successful execution of the helm rundreing.
 
-        #### 2. Risk Analysis
-        * Report the risks, violations, or misconfigurations discovered during semantic or runtime validation, no other statements.
-        * **Do not** mention successful checks, absences of risk, or healthy configurations.
-        * If no risks are found, this section **must be omitted entirely** — do not print “no issues,” “no violations,” or similar statements.
-        * Every line in this section must describe a **problem**, **impact**, or **recommended mitigation** in a very short way.
-
-        #### 3. Impact Prediction
+        #### 2. Impact Prediction
         * Provide a **short, developer-friendly summary** of the real-world runtime impact.
         * Use a list short precise paragraphe.
         * Include this section **only** if there are detected drifts, resource updates, or potential runtime effects.
 
+        #### 3. Risk Analysis
+
+        * Output only confirmed misconfigurations or runtime-breaking risks.
+        * Exclude any mention of healthy or successful checks.
+        * Omit this section entirely if no blocking issues exist.
+        * Each line must describe a specific fault, its runtime impact, or a clear mitigation.
+
       6.  **POST PR comment (MANDATORY step):**
-      
+
         * **PR IDENTIFICATION & FALLBACK:** the PR ID is explicitly provided in the input, the githup repository URL is provided in argocd application 'app-of-apps' in namespace argocd (if you can not find the github repo use https://github.com/qasmi/smart-idp)
         * Submit the generated report (in step 5) into the pull request (PR) review/comment.
         * **MUST** use the relevant GitHub tools to submit the PR comment / review.
