--- a/demo-resources/gitops-agent-NextG.yaml
+++ b/demo-resources/gitops-agent-NextG.yaml
@@ -74,7 +74,7 @@ spec:
 
           * Extract `repoURL`, `chart`, `targetRevision`, `values`, `namespace`.
           * Merge `.helm.values` and `.helm.parameters` into a normalized Helm configuration.
-          * Validate the chart reference (`repo/chart` or `./chart`). If invalid → mark as `FAILED_EXTRACTION`.
+          * Validate the chart reference (`repo/chart`). If invalid → mark as `FAILED_EXTRACTION`.
         * Render the **desired manifest** using Helm tools to simulate the chart installation process using `helm upgrade --install --dry-run --output yaml` (or equivalent flags).
 
         ### 2. Drift Comparison
@@ -186,13 +186,16 @@ spec:
 
         ### 6. PR Review Submission
 
-        * Always post the final report as a GitHub PR comment/review.
+        * Always post the final report as a GitHub PR comment.
         * PR info:
 
           * Use provided PR ID and repo URL.
           * If missing, default to `https://github.com/qasmi/smart-idp`.
         * Retry submission up to **3 times**; never terminate silently.
         * If analysis incomplete, submit with `[INCOMPLETE ANALYSIS]` header.
+        * Always call the `pull_request_review_write.create` method with the `"event"` parameter set to `"COMMENT"`.
+        * This ensures the review is submitted immediately and never remains pending.
+        * Never omit the `"event"` field to avoid creating pending reviews.
 
 
         ## Safety & Behavior Rules
@@ -210,16 +213,12 @@ spec:
 
         1. PR comment successfully submitted, or
         2. 3 retries fail with logged error details.
-        
-        * **Pending Review Handling:**
-          - If a PR review submission fails due to an existing pending review by the same user,
-            immediately switch to posting the report as a standalone PR comment using the
-            GitHub comment creation API.
-          - Never terminate execution or drop output silently.
-          - The fallback comment must include the full report and the header:
-            `[AUTOMATED REVIEW POSTED AS COMMENT DUE TO PENDING REVIEW LOCK]`.
 
-        No other termination state is valid.
+        * **Pending Review Handling:**
+          - If `.create` returns an error indicating a pending review exists:
+              1. Call `pull_request_review_write.delete_pending` for the same PR.
+              2. Retry `.create` with `"event": "COMMENT"`.
+          - If still unsuccessful after retry → log and exit gracefully with an `[INCOMPLETE ANALYSIS]` notice.
 
         ### Summary
 
