fix agent merge

--- a/demo-cluster/.k8s-gen/user-manifests.yaml
+++ b/demo-cluster/.k8s-gen/user-manifests.yaml
@@ -28,9 +28,6 @@ spec:
     requests.memory: "1Gi" 
     limits.cpu: "1"  
     limits.memory: "1Gi" 
-    pods: "2"   
-    services: "5"  
-    persistentvolumeclaims: "4"
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -51,12 +48,20 @@ spec:
 
         resources: 
           limits:
-            cpu: 1500m
+            cpu: 500m
             memory: 128Mi
           requests:
             cpu: 100m
             memory: 128Mi
 
+        nodeSelector:
+          role: storage
+        
+        tolerations:
+          - key: role
+            value: storage
+            operator: Equal
+            effect: NoSchedule
       
         service:
           type: LoadBalancer
