--- a/demo-resources/gitops-agent-merge.yaml
+++ b/demo-resources/gitops-agent-merge.yaml
@@ -129,7 +129,7 @@ spec:
 
         #### 2️⃣ Impact Prediction
 
-        Short, developer-friendly paragraphs describing runtime outcomes of the drift.
+        Short, developer-friendly list describing runtime outcomes of the drift.
 
         #### 3️⃣ Risk Analysis
 
@@ -167,12 +167,13 @@ spec:
         * If creation is expected, ensure appropriate permissions exist for `Namespace` creation.
 
       * **Resource Quota Enforcement:**
-
-        * Gather `ResourceQuota` objects from the live namespace.
-        * If namespace does not exist, check for a `ResourceQuota` object in the desired manifest.
-        * Validate that total requested resources (replicas x requests/limits) do not exceed defined quotas.
-        * Report precise limit violations (e.g., “Memory request exceeds quota limit by 128Mi”).
-        * Skip this tep if the resourceQuota does not exist in the cluster and desired manifest
+        
+        * Validate resource requests/limits against:
+          * Live `ResourceQuota` (if namespace exists), or
+          * Desired `ResourceQuota` (if defined).
+        * Validate that total requested resources (replicas x requests/limits) do not exceed the ResourceQuota.
+        * Report precise limit violations.
+        * Skip this step if the resourceQuota does not exist in the cluster and desired manifest.
 
       * **Dependency Graph Initialization:**
 
